--- a/2 - Network Security/2.1 Analyze network layer communication.md
+++ b/2 - Network Security/2.1 Analyze network layer communication.md
@@ -15,59 +15,25 @@ returned to your host, the results contain an error message: “udp port 53 unre
 
 In the DNS and ICMP log, you find the following information:
 
-1. In the first two lines of the log file, you see the initial outgoing request from your computer to the DNS server requesting the IP address 
-of yummyrecipesforme.com. This request is sent in a UDP packet.
+1.	The first two lines of the log file show the initial outgoing request from your computer to the DNS server requesting the IP address of yummyrecipesforme.com. This request is sent in a UDP packet.
+2.	The third and fourth lines of the log show the response to your UDP packet. In this case, the ICMP 203.0.113.2 line is the start of the error message indicating that the UDP packet was undeliverable to port 53 of the DNS server.
+3.	In front of each request and response, you find timestamps that indicate when the incident happened. In the log, this is the first sequence of numbers displayed: 13:24:32.192571. This means the time is 1:24 p.m., 32.192571 seconds.
+4.	After the timestamps, you will find the source and destination IP addresses. In the first line, where the UDP packet travels from your browser to the DNS server, this information is displayed as: 192.51.100.15 > 203.0.113.2.domain. The IP address to the left of the greater than (>) symbol is the source address, which in this example is your computer’s IP address. The IP address to the right of the greater than (>) symbol is the destination IP address. In this case, it is the IP address for the DNS server: 203.0.113.2.domain. For the ICMP error response, the source address is 203.0.113.2 and the destination is your computers IP address 192.51.100.15.
+5.	After the source and destination IP addresses, there can be a number of additional details like the protocol, port number of the source, and flags. In the first line of the error log, the query identification number appears as: 35084. The plus sign after the query identification number indicates there are flags associated with the UDP message. The "A?" indicates a flag associated with the DNS request for an A record, where an A record maps a domain name to an IP address. The third line displays the protocol of the response message to the browser: "ICMP," which is followed by an ICMP error message.
+6.	The error message, "udp port 53 unreachable" is mentioned in the last line. Port 53 is a port for DNS service. The word "unreachable" in the message indicates the UDP message requesting an IP address for the domain "www.yummyrecipesforme.com" did not go through to the DNS server because no service was listening on the receiving DNS port.
+7.	The remaining lines in the log indicate that ICMP packets were sent two more times, but the same delivery error was received both times. 
 
-2. Next you find timestamps that indicate when the event happened. In the log, this is the first sequence of numbers displayed. For example: 
-13:24:32.192571. This displays the time 1:24 p.m., 32.192571 seconds.
-
-3. The source and destination IP address is next. In the error log, this information is displayed as: 192.51.100.15.52444 > 203.0.113.2.domain. 
-The IP address to the left of the greater than (>) symbol is the source address. In this example, the source is your computer’s IP address. 
-The IP address to the right of the greater than (>) symbol is the destination IP address. In this case, it is the IP address for the DNS server: 
-203.0.113.2.domain.
-
-4. The second and third lines of the log show the response to your initial ICMP request packet. In this case, the ICMP 203.0.113.2 line is the 
-start of the error message indicating that the ICMP packet was undeliverable to the port of the DNS server.
-
-
-5. Next are the protocol and port number, which displays which protocol was used to handle communications and which port it was delivered to. 
-In the error log, this appears as: udp port 53 unreachable. This means that the UDP protocol was used to request a domain name resolution using the 
-address of the DNS server over port 53. Port 53, which aligns to the .domain extension in 203.0.113.2.domain, is a well-known port for DNS service. 
-The word “unreachable” in the message indicates the message did not go through to the DNS server. Your browser was not able to obtain the IP address for 
-yummyrecipesforme.com, which it needs to access the website because no service was listening on the receiving DNS port as indicated by the ICMP error 
-message “udp port 53 unreachable.”. 
-
-The remaining lines in the log indicate that ICMP packets were sent two more times, but the same delivery error was received both times.
 
 Now that you have captured data packets using a network analyzer tool, it is your job to identify which network protocol and service were 
 impacted by this incident. Then, you will need to write a follow-up report.
 
 ### Provide a Summary of the Problem Found in the DNS and ICMP Traffic Log
 
-* DNS server is down as a result of port 53 being unreachable. The ICMP request packet indicates that the packet has not been delivered to 
-the port of DNS server successfully.
-
-* As we know, Port 53 is commonly used for DNS. That being said, the most likely issue is the DNS is not responding and it can be caused by 
-DDOS attack against the DNS server.
-
-* The UDP protocol reveals that: DNS is not responding.
-
-* This is based on the results of the network analysis, which show that the ICMP echo reply returned the error message: at port 53 , UDP port 53 unreachable.
-
-*  The port noted in the error message is used for: DNS Server
-The most likely issue is: DNS server is not responding.
+The network protocol analyzer logs show that port 53, which is used for DNS queries, is currently unreachable when attempting to access the secure employee background check website. Since DNS is essential for resolving domain names, this issue may be preventing the website from loading correctly. The cause could be a misconfiguration in the firewall or a problem with the DNS server itself. Additionally, this disruption could be a sign of a malicious attack targeting the DNS infrastructure or the web server to interrupt access.
 
 ### Explain Your Analysis of the Data and Provide at Least One Cause of the Incident
 
-* Time incident occurred: 1.23pm.
-* Explain how the IT team became aware of the incident: The customer reported to the company that they were unable to gain access 
-   to the company’s website. It was then reported that the message on the web page is “port unreachable”.
-* Explain the actions taken by the IT department to investigate the incident: Security engineers had a look on the webpage 
-  and received an error “port being unreachable”. The team used TCPdump (network analyzer) to see the network traffic surrounding the website.
-* Note key findings of the IT department's investigation (i.e., details related to the port affected, DNS server, etc.): 
-   Go to website then load the webpage while monitoring the networks via TCPdump. It received lots of traffic. Sent UDP 
-   packets and received ICMP response to return to the host that indicates port 53 unreachable.
-* Note a likely cause of the incident: Determine whether port 53 is working or not. IF it’s fine, then check firewall.
-  -Firewall: The ability to block network traffic on specific ports. Port blocking can be used to stop or prevent an attack.
-  -DOS: There could be flood of information being sent to the network device to make it crash or unable to function. The hacker could 
-  disable dns server using DOS attack. Or someone within the organization might have disabled port 53 on firewalls.
+The incident occurred Earlier today, the Human Resources (HR) department reported that they were unable to access the background check web portal. In response, the network security team initiated an investigation using the tcpdump network analysis tool. During the analysis, logs indicated that port 53, the standard port for HTTPS traffic, was not reachable from within the network.
+The issue appears to be affecting secure connections to the portal, and further investigation is underway to determine the underlying cause and restore full access. Immediate next steps include reviewing firewall configurations to check for any blocks on port 53 and coordinating with the system administrator responsible for the web server to assess for any signs of malicious activity or system compromise.
+The HR team has raised a concern that a specific recent job applicant may be attempting to interfere with the background check process. Based on preliminary findings, the network security team is considering the possibility of a targeted attack intended to disrupt access to the portal
+
