--- a/2 - Network Security/2.2 Analyze network attacks.md
+++ b/2 - Network Security/2.2 Analyze network attacks.md
@@ -1,1 +1,25 @@
 # Cybersecurity Incident Report: Analyze Network Attacks
+
+## Scenario
+You work as a security analyst for a travel agency that advertises sales and promotions on the company’s website. The employees of the company regularly access the company’s sales webpage to search for vacation packages their customers might like.
+
+One afternoon, you receive an automated alert from your monitoring system indicating a problem with the web server. You attempt to visit the company’s website, but you receive a connection timeout error message in your browser.
+
+You use a packet sniffer to capture data packets in transit to and from the web server. You notice a large number of TCP SYN requests coming from an unfamiliar IP address. The web server appears to be overwhelmed by the volume of incoming traffic and is losing its ability to respond to the abnormally large number of SYN requests. You suspect the server is under attack by a malicious actor.
+
+You take the server offline temporarily so that the machine can recover and return to a normal operating status. You also configure the company’s firewall to block the IP address that was sending the abnormal number of SYN requests. You know that your IP blocking solution won’t last long, as an attacker can spoof other IP addresses to get around this block. You need to alert your manager about this problem quickly and discuss the next steps to stop this attacker and prevent this problem from happening again. You will need to be prepared to tell your boss about the type of attack you discovered and how it was affecting the web server and employees.
+
+### Identify the Type of Attack That May Have Caused This Network Interruption
+
+A likely cause of the website’s connection timeout errors is a Denial-of-Service (DoS) attack. Network log analysis indicates that the web server became unresponsive after being flooded with an unusually high volume of TCP SYN packets.
+This behavior aligns with a SYN flood attack, a specific form of DoS where an attacker sends repeated SYN requests but does not complete the standard TCP three-way handshake. These incomplete connections cause the server to allocate resources for each attempt, eventually filling its connection table with half-open connections.
+As a result, the server is unable to accept new, legitimate connections, leading to connection timeouts and effectively making the website inaccessible to users.
+
+### Explain how the attack is causing the website to malfunction
+
+When a visitor attempts to access the website, a TCP three-way handshake is used to establish a connection between the user's device and the web server. This handshake involves the following steps:
+1.	The client sends a SYN packet to the server to request a connection.
+2.	The server responds with a SYN-ACK packet, acknowledging the request and reserving system resources to handle the new connection.
+3.	The client replies with an ACK packet, completing the handshake and allowing data transmission to begin.
+However, during a SYN flood attack, a malicious actor sends a large volume of SYN packets to the server but does not respond with the final ACK. This leaves the server with numerous half-open connections, consuming its memory and connection queue resources.
+As a result, the server becomes overloaded and unable to respond to legitimate SYN 
