Update 2.2 Analyze network attacks.md

--- a/2 - Network Security/2.2 Analyze network attacks.md
+++ b/2 - Network Security/2.2 Analyze network attacks.md
@@ -18,8 +18,18 @@ As a result, the server is unable to accept new, legitimate connections, leading
 ### Explain how the attack is causing the website to malfunction
 
 When a visitor attempts to access the website, a TCP three-way handshake is used to establish a connection between the user's device and the web server. This handshake involves the following steps:
+
 1.	The client sends a SYN packet to the server to request a connection.
 2.	The server responds with a SYN-ACK packet, acknowledging the request and reserving system resources to handle the new connection.
 3.	The client replies with an ACK packet, completing the handshake and allowing data transmission to begin.
+   
+When a visitor attempts to access the website, a TCP three-way handshake is used to establish a connection between the user's device and the web server. This handshake involves the following steps:
+
+1.	The client sends a SYN packet to the server to request a connection.
+2.	The server responds with a SYN-ACK packet, acknowledging the request and reserving system resources to handle the new connection.
+3.	The client replies with an ACK packet, completing the handshake and allowing data transmission to begin.
+   
 However, during a SYN flood attack, a malicious actor sends a large volume of SYN packets to the server but does not respond with the final ACK. This leaves the server with numerous half-open connections, consuming its memory and connection queue resources.
-As a result, the server becomes overloaded and unable to respond to legitimate SYN 
+As a result, the server becomes overloaded and unable to respond to legitimate SYN requests. This leads to visitors receiving connection timeout errors when trying to access the website, as the server has no capacity left to establish new connections.
+Log analysis confirms that the web server is overwhelmed by excessive SYN requests and cannot complete new handshakes, indicating a high likelihood of an ongoing SYN flood attack.
+
